--- a/README.html
+++ b/README.html
@@ -475,6 +475,13 @@ extrair_distancia &lt;- function(df){
   return(new_df)
 }</code></pre>
 </div>
+<div id="análise" class="section level2">
+<h2>3. Análise</h2>
+<div class="figure">
+<img src="%22C:\Users\lucas\OneDrive\Documentos\GitHub\Bike-Sharing-Report\Members.png%22" alt />
+<p class="caption">graph</p>
+</div>
+</div>
 </div>
 
 
